force-app/main/default/objects/E_MOC_Prelim_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Prelim Risk</relationshipLabel>
        <relationshipName>E_MOC_Prelim_Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ทำการ Monitor tag ข้างเคียง หรือตัวอ่านที่สามารถทดแทนได้ (Redundant Transmitter) และทำการ Record ตามความถี่ที่เหมาะสม</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Consequence</fullName>
                </value>
                <value>
                    <fullName>Mitigation / Precaution</fullName>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E-MOC Prelim Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>E_MOC_Application__c</columns>
        <columns>Topic__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRN-{0000000}</displayFormat>
        <label>E-MOC Prelim Risk No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>